# InventoryApp

./: .gitignore  Cargo.toml
android/: Cargo.toml
android/src/: app.rs  inv.rs  lib.rs  ui.rs
common/: Cargo.toml
common/src/: inv.rs  lib.rs  old_inv.rs
ios/: Cargo.toml  build.sh
ios/src/: app.rs  graphics.rs  input.rs  inv.rs  lib.rs  ui.rs
ios/xcode/Inventory/: Info.plist
ios/xcode/Inventory.xcodeproj/: project.pbxproj
ios/xcode/Inventory.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/xcode/Inventory.xcodeproj/project.xcworkspace/xcuserdata/mason.xcuserdatad/: UserInterfaceState.xcuserstate
ios/xcode/Inventory.xcodeproj/xcshareddata/xcschemes/: wgpu_phone.xcscheme
ios/xcode/base/: AppDelegate.swift  InputCollector.swift  MetalView.swift  ViewController.swift  invapp-bridge.h  libinvapp.h
ios/xcode/base/Base.lproj/: Main.storyboard
server/: Cargo.toml
server/src/: main.rs  old_types.rs  types.rs
