[package]
name = "inv-android"
version = "0.1.0"
edition = "2021"

[jano]
icon = "./icon.png"
name = "Inventory"
app_id = "com.inv.android"
version = "0.1.0"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
jano = { git = "https://github.com/MasonFeurer/Jano.git", features = ["egui", "serde"] }
inv-common = { path = "../common" }
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }
pollster = "0.3"
bincode = "1.3.3"
image = { version = "0.24.7", features = ["png"] }
fastrand = "2.1"
serde = { version = "1.0", features = ["serde_derive"] }
time = { version = "0.3.36", features = ["std", "local-offset"] }
